generated/IndustrialParser.java
// Generated from grammar/Industrial.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class IndustrialParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAQUINA=1, SENSOR=2, PROCESO=3, ALARMA=4, INICIAR=5, DETENER=6, PAUSAR=7, 
		REINICIAR=8, SI=9, ENTONCES=10, SINO=11, FIN=12, MIENTRAS=13, HACER=14, 
		REPETIR=15, VECES=16, LEER=17, ESCRIBIR=18, ESPERAR=19, MS=20, VAR=21, 
		NUM=22, TEXTO=23, BOOL=24, VERDADERO=25, FALSO=26, Y=27, O=28, NO=29, 
		MAYOR_IGUAL=30, MENOR_IGUAL=31, IGUAL_IGUAL=32, DIFERENTE=33, MAYOR=34, 
		MENOR=35, IGUAL=36, MAS=37, MENOS=38, MULT=39, DIV=40, LLAVE_AB=41, LLAVE_CE=42, 
		PAREN_AB=43, PAREN_CE=44, PUNTO_COMA=45, NUMERO=46, CADENA=47, ID=48, 
		WS=49, COMENTARIO=50;
	public static final int
		RULE_programa = 0, RULE_declaracionMaquina = 1, RULE_cuerpoMaquina = 2, 
		RULE_declaracionVar = 3, RULE_tipo = 4, RULE_declaracionProceso = 5, RULE_sentencias = 6, 
		RULE_sentencia = 7, RULE_asignacion = 8, RULE_controlMaquina = 9, RULE_sentenciaSi = 10, 
		RULE_sentenciaMientras = 11, RULE_sentenciaRepetir = 12, RULE_llamadaEscribir = 13, 
		RULE_llamadaAlarma = 14, RULE_sentenciaEsperar = 15, RULE_expresion = 16, 
		RULE_condicion = 17, RULE_operadorComp = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracionMaquina", "cuerpoMaquina", "declaracionVar", 
			"tipo", "declaracionProceso", "sentencias", "sentencia", "asignacion", 
			"controlMaquina", "sentenciaSi", "sentenciaMientras", "sentenciaRepetir", 
			"llamadaEscribir", "llamadaAlarma", "sentenciaEsperar", "expresion", 
			"condicion", "operadorComp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'maquina'", "'sensor'", "'proceso'", "'alarma'", "'iniciar'", 
			"'detener'", "'pausar'", "'reiniciar'", "'si'", "'entonces'", "'sino'", 
			"'fin'", "'mientras'", "'hacer'", "'repetir'", "'veces'", "'leer'", "'escribir'", 
			"'esperar'", "'ms'", "'var'", "'num'", "'texto'", "'bool'", "'verdadero'", 
			"'falso'", "'y'", "'o'", "'no'", "'>='", "'<='", "'=='", "'!='", "'>'", 
			"'<'", "'='", "'+'", "'-'", "'*'", "'/'", "'{'", "'}'", "'('", "')'", 
			"';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAQUINA", "SENSOR", "PROCESO", "ALARMA", "INICIAR", "DETENER", 
			"PAUSAR", "REINICIAR", "SI", "ENTONCES", "SINO", "FIN", "MIENTRAS", "HACER", 
			"REPETIR", "VECES", "LEER", "ESCRIBIR", "ESPERAR", "MS", "VAR", "NUM", 
			"TEXTO", "BOOL", "VERDADERO", "FALSO", "Y", "O", "NO", "MAYOR_IGUAL", 
			"MENOR_IGUAL", "IGUAL_IGUAL", "DIFERENTE", "MAYOR", "MENOR", "IGUAL", 
			"MAS", "MENOS", "MULT", "DIV", "LLAVE_AB", "LLAVE_CE", "PAREN_AB", "PAREN_CE", 
			"PUNTO_COMA", "NUMERO", "CADENA", "ID", "WS", "COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Industrial.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IndustrialParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IndustrialParser.EOF, 0); }
		public List<DeclaracionMaquinaContext> declaracionMaquina() {
			return getRuleContexts(DeclaracionMaquinaContext.class);
		}
		public DeclaracionMaquinaContext declaracionMaquina(int i) {
			return getRuleContext(DeclaracionMaquinaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				declaracionMaquina();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MAQUINA );
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionMaquinaContext extends ParserRuleContext {
		public TerminalNode MAQUINA() { return getToken(IndustrialParser.MAQUINA, 0); }
		public TerminalNode ID() { return getToken(IndustrialParser.ID, 0); }
		public TerminalNode LLAVE_AB() { return getToken(IndustrialParser.LLAVE_AB, 0); }
		public CuerpoMaquinaContext cuerpoMaquina() {
			return getRuleContext(CuerpoMaquinaContext.class,0);
		}
		public TerminalNode LLAVE_CE() { return getToken(IndustrialParser.LLAVE_CE, 0); }
		public DeclaracionMaquinaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionMaquina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterDeclaracionMaquina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitDeclaracionMaquina(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitDeclaracionMaquina(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionMaquinaContext declaracionMaquina() throws RecognitionException {
		DeclaracionMaquinaContext _localctx = new DeclaracionMaquinaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracionMaquina);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(MAQUINA);
			setState(46);
			match(ID);
			setState(47);
			match(LLAVE_AB);
			setState(48);
			cuerpoMaquina();
			setState(49);
			match(LLAVE_CE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuerpoMaquinaContext extends ParserRuleContext {
		public List<DeclaracionVarContext> declaracionVar() {
			return getRuleContexts(DeclaracionVarContext.class);
		}
		public DeclaracionVarContext declaracionVar(int i) {
			return getRuleContext(DeclaracionVarContext.class,i);
		}
		public List<DeclaracionProcesoContext> declaracionProceso() {
			return getRuleContexts(DeclaracionProcesoContext.class);
		}
		public DeclaracionProcesoContext declaracionProceso(int i) {
			return getRuleContext(DeclaracionProcesoContext.class,i);
		}
		public CuerpoMaquinaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpoMaquina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterCuerpoMaquina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitCuerpoMaquina(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitCuerpoMaquina(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuerpoMaquinaContext cuerpoMaquina() throws RecognitionException {
		CuerpoMaquinaContext _localctx = new CuerpoMaquinaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cuerpoMaquina);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PROCESO || _la==VAR) {
				{
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(51);
					declaracionVar();
					}
					break;
				case PROCESO:
					{
					setState(52);
					declaracionProceso();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(IndustrialParser.VAR, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(IndustrialParser.ID, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(IndustrialParser.PUNTO_COMA, 0); }
		public DeclaracionVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterDeclaracionVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitDeclaracionVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitDeclaracionVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionVarContext declaracionVar() throws RecognitionException {
		DeclaracionVarContext _localctx = new DeclaracionVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracionVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(VAR);
			setState(59);
			tipo();
			setState(60);
			match(ID);
			setState(61);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(IndustrialParser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(IndustrialParser.TEXTO, 0); }
		public TerminalNode BOOL() { return getToken(IndustrialParser.BOOL, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 29360128L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionProcesoContext extends ParserRuleContext {
		public TerminalNode PROCESO() { return getToken(IndustrialParser.PROCESO, 0); }
		public TerminalNode ID() { return getToken(IndustrialParser.ID, 0); }
		public TerminalNode LLAVE_AB() { return getToken(IndustrialParser.LLAVE_AB, 0); }
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TerminalNode LLAVE_CE() { return getToken(IndustrialParser.LLAVE_CE, 0); }
		public DeclaracionProcesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionProceso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterDeclaracionProceso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitDeclaracionProceso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitDeclaracionProceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionProcesoContext declaracionProceso() throws RecognitionException {
		DeclaracionProcesoContext _localctx = new DeclaracionProcesoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracionProceso);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(PROCESO);
			setState(66);
			match(ID);
			setState(67);
			match(LLAVE_AB);
			setState(68);
			sentencias();
			setState(69);
			match(LLAVE_CE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciasContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 281474977539056L) != 0)) {
				{
				{
				setState(71);
				sentencia();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public ControlMaquinaContext controlMaquina() {
			return getRuleContext(ControlMaquinaContext.class,0);
		}
		public SentenciaSiContext sentenciaSi() {
			return getRuleContext(SentenciaSiContext.class,0);
		}
		public SentenciaMientrasContext sentenciaMientras() {
			return getRuleContext(SentenciaMientrasContext.class,0);
		}
		public SentenciaRepetirContext sentenciaRepetir() {
			return getRuleContext(SentenciaRepetirContext.class,0);
		}
		public LlamadaEscribirContext llamadaEscribir() {
			return getRuleContext(LlamadaEscribirContext.class,0);
		}
		public LlamadaAlarmaContext llamadaAlarma() {
			return getRuleContext(LlamadaAlarmaContext.class,0);
		}
		public SentenciaEsperarContext sentenciaEsperar() {
			return getRuleContext(SentenciaEsperarContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentencia);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				asignacion();
				}
				break;
			case INICIAR:
			case DETENER:
			case PAUSAR:
			case REINICIAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				controlMaquina();
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				sentenciaSi();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				sentenciaMientras();
				}
				break;
			case REPETIR:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				sentenciaRepetir();
				}
				break;
			case ESCRIBIR:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				llamadaEscribir();
				}
				break;
			case ALARMA:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				llamadaAlarma();
				}
				break;
			case ESPERAR:
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				sentenciaEsperar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IndustrialParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(IndustrialParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(IndustrialParser.PUNTO_COMA, 0); }
		public TerminalNode LEER() { return getToken(IndustrialParser.LEER, 0); }
		public TerminalNode PAREN_AB() { return getToken(IndustrialParser.PAREN_AB, 0); }
		public TerminalNode CADENA() { return getToken(IndustrialParser.CADENA, 0); }
		public TerminalNode PAREN_CE() { return getToken(IndustrialParser.PAREN_CE, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignacion);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(ID);
				setState(88);
				match(IGUAL);
				setState(89);
				expresion(0);
				setState(90);
				match(PUNTO_COMA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(ID);
				setState(93);
				match(IGUAL);
				setState(94);
				match(LEER);
				setState(95);
				match(PAREN_AB);
				setState(96);
				match(CADENA);
				setState(97);
				match(PAREN_CE);
				setState(98);
				match(PUNTO_COMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControlMaquinaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IndustrialParser.ID, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(IndustrialParser.PUNTO_COMA, 0); }
		public TerminalNode INICIAR() { return getToken(IndustrialParser.INICIAR, 0); }
		public TerminalNode DETENER() { return getToken(IndustrialParser.DETENER, 0); }
		public TerminalNode PAUSAR() { return getToken(IndustrialParser.PAUSAR, 0); }
		public TerminalNode REINICIAR() { return getToken(IndustrialParser.REINICIAR, 0); }
		public ControlMaquinaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlMaquina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).enterControlMaquina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IndustrialListener ) ((IndustrialListener)listener).exitControlMaquina(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IndustrialVisitor ) return ((IndustrialVisitor<? extends T>)visitor).visitControlMaquina(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlMaquinaContext controlMaquina() throws RecognitionException {
		ControlMaquinaContext _localctx = new ControlMaquinaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_controlMaquina);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 480L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(102);
			match(ID);
			setState(103);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
